--- a/res/sass/_partial/themes/original/_config.scss
+++ b/res/sass/_partial/themes/original/_config.scss
@@ -11,7 +11,7 @@ $textSizeAdjust: 'none';
 $tapHighlight: rgba(0,0,0,0);
 
 /* Font */
-$fontFamily: Meiryo, Verdana, "游ゴシック", YuGothic, "Hiragino Kaku Gothic ProN", sans-serif;
+$fontFamily: Arial, "游ゴシック", YuGothic, "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
 
 /* Body */
 $bodyBackgroundColor: '#f1f2f3';
