--- a/res/sass/_partial/scaffolding/layout/_container.scss
+++ b/res/sass/_partial/scaffolding/layout/_container.scss
@@ -1,6 +1,6 @@
 .container {
-  max-width: #{$containerMaxWidth}px;
-  min-width: #{$containerMinWidth}px;
+  max-width: #{$sp_container_maxWidth}px;
+  min-width: #{$sp_container_minWidth}px;
   margin-left: auto;
   margin-right: auto;
 }
