--- a/public/styles/style_pc.css
+++ b/public/styles/style_pc.css
@@ -1,1 +1,1 @@
-.container{position:relative;max-width:1024px;padding-left:170px;padding-right:20px}.contents{background-color:#e1e2e3}.glNav{position:fixed;top:0;left:0;width:150px;background:#fdd}.glNav .logo{position:relative;height:auto}
+.container{position:relative;max-width:1024px;padding-left:170px;padding-right:20px}.contents{padding-top:0;background-color:#e1e2e3}.glNav{position:fixed;top:0;left:0;width:150px;background:#fdd}.glNav .logo{position:relative;height:auto;background:#fdd}.topImg img{position:fixed;top:0;left:0}
