--- a/res/sass/_partial/themes/_config.scss
+++ b/res/sass/_partial/themes/_config.scss
@@ -20,28 +20,36 @@ $bodyBackgroundColor: '#fff';
 $responsive: true; //true, false
 $responsiveMinWidth: 580;
 
+
+/*
+* Spacing
+*/
+$spacing: 5;
+$spacingLength: 5;
+
+$sp_contents_vertical_spacing:20;
+
+$pc_contents_side_spacing:20;
+$pc_contents_vertical_spacing:20;
+
 /*
 * Layout
 */
-/* container */
 $sp_container_maxWidth: 960;
 $sp_container_minWidth: 320;
 $sp_logo_height: 50;
 
 $pc_container_maxWidth: 1024;
 $pc_navigation_width:150;
-$pc_contents_spacing:20;
+
+$pc_contents_width: $pc_container_maxWidth - $pc_navigation_width - $pc_contents_side_spacing * 2;
+
+
 
 /*
-* Spacing
+* font
 */
-/* spacing base */
-$spacing: 5;
-$spacingLength: 5;
-
-
-/* font-size */
-$textDefaultSize: 14;
+$textDefaultSize: 16;
 $textHugeSize:  ($textDefaultSize + 6);
 $textJumboSize: ($textDefaultSize + 4);
 $textLargeSize: ($textDefaultSize + 2);
@@ -49,14 +57,19 @@ $textMediumSize: $textDefaultSize;
 $textSmallSize: ($textDefaultSize - 2);
 $textTinySize:  ($textDefaultSize - 4);
 
-/* line-height */
 $textMinLineHeight: 1;
 $textLineHeight: 1.2;
 $textLineHeightM: 1.4;
 $textLineHeightL: 1.6;
 
 /*
-* status
+* color
 */
-/* color */
 $status_normalColor                  :'#345';
+
+/*
+* components
+*/
+
+//column
+$pc_column_spacing:20;
