--- a/res/sass/_partial/themes/_config.scss
+++ b/res/sass/_partial/themes/_config.scss
@@ -73,3 +73,8 @@ $status_normalColor                  :'#345';
 
 //column
 $pc_column_spacing:20;
+
+$sp_image_unit_spacing:5;
+$sp_image_unit_spacingBottom:20;
+$pc_image_unit_spacing:15;
+$pc_image_unit_spacingBottom:20;
