--- a/res/sass/_partial/themes/_config.scss
+++ b/res/sass/_partial/themes/_config.scss
@@ -11,7 +11,7 @@ $textSizeAdjust: 'none';
 $tapHighlight: rgba(0,0,0,0);
 
 /* Font */
-$fontFamily: Arial, "游ゴシック", YuGothic, "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+$fontFamily: Helvetica, メイリオ, Meiryo, "游ゴシック", YuGothic, "Hiragino Kaku Gothic ProN", sans-serif;
 
 /* Body */
 $bodyBackgroundColor: '#fff';
