--- a/res/sass/_partial/components/images/_image_unit.scss
+++ b/res/sass/_partial/components/images/_image_unit.scss
@@ -9,3 +9,15 @@
   .txt{
   }
 }
+
+.imgUnitFixed{
+  margin-bottom:#{$sp_image_unit_spacingBottom}px;
+  .item{
+    margin-bottom:#{$sp_image_unit_spacing}px;
+  }
+  .itemImg{
+    width:180px;
+    margin-left:auto;
+    margin-right:auto;
+  }
+}
