--- a/res/sass/_partial/components_pc/_all.scss
+++ b/res/sass/_partial/components_pc/_all.scss
@@ -1,2 +1,6 @@
 @import "images/all";
 @import "column/all";
+@import "text/all";
+@import "section/all";
+@import "subnav/all";
+@import "list/all";
