--- a/res/sass/_partial/scaffolding_pc/layout/_contents.scss
+++ b/res/sass/_partial/scaffolding_pc/layout/_contents.scss
@@ -1,4 +1,13 @@
 .contents{
-  padding-top: 0;
-  background-color:#e1e2e3;
+  background-color:transparent;
+  padding-top:0;
+  .mainCont{
+    background-color:rgba(255,255,255,0.9);
+    padding: #{$pc_contents_vertical_spacing}px #{$pc_contents_side_spacing}px;
+  }
+  &.topCont{
+    .mainCont{
+      display: none;
+    }
+  }
 }
