--- a/res/sass/_partial/components/subnav/_subnav.scss
+++ b/res/sass/_partial/components/subnav/_subnav.scss
@@ -9,6 +9,7 @@
     text-align: center;
     a{
       display: block;
+      height:100%;
       line-height: $textMinLineHeight;
       font-size:#{$textMediumSize}px;
       color:$status_linkColor;
