added script and rename css

--- a/res/sass/_partial/components_pc/images/_top_image.scss
+++ b/res/sass/_partial/components_pc/images/_top_image.scss
@@ -1,3 +1,16 @@
 .topImg{
-  display: none;
+  img{
+    display: none;
+  }
+}
+
+.topCont{
+  .topImg{
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    width: 100%;
+    min-height: #{$pc_container_minHeight}px;
+  }
 }
