--- a/res/sass/_partial/themes/_config.scss
+++ b/res/sass/_partial/themes/_config.scss
@@ -43,6 +43,7 @@ $sp_logo_height: 75;
 
 $pc_container_maxWidth: 1280;
 $pc_container_minWidth: 960;
+$pc_container_minHeight: 640;
 $pc_navigation_width:200;
 $pc_navigation_height:200;
 
