--- a/res/sass/_partial/scaffolding_pc/layout/_container.scss
+++ b/res/sass/_partial/scaffolding_pc/layout/_container.scss
@@ -26,6 +26,6 @@ body{
 
 .container {
   max-width: #{$pc_container_maxWidth}px;
-  min-height: 640px;
+  min-height: #{$pc_container_minHeight}px;
   padding: 20px 50px 0 270px;
 }
