modified for FB

--- a/res/sass/_partial/scaffolding_pc/layout/_container.scss
+++ b/res/sass/_partial/scaffolding_pc/layout/_container.scss
@@ -27,5 +27,5 @@ body{
 .container {
   max-width: #{$pc_container_maxWidth}px;
   min-height: #{$pc_container_minHeight}px;
-  padding: 20px 50px 0 270px;
+  padding: #{$pc_container_paddingTop}px #{$pc_container_paddingLeft}px 0 #{$pc_container_paddingRight}px;
 }
