--- a/res/sass/_partial/scaffolding_pc/layout/_global_navigation.scss
+++ b/res/sass/_partial/scaffolding_pc/layout/_global_navigation.scss
@@ -33,6 +33,9 @@
             color:$status_linkColor;
           }
         }
+        &.pageTop{
+          display: none;
+        }
         ul.sub{
           padding:5px 0 0 10px;
           > li{
