--- a/res/sass/_partial/themes/_config.scss
+++ b/res/sass/_partial/themes/_config.scss
@@ -81,7 +81,8 @@ $textLineHeightL: 1.8;
 $status_normalColor:#444;
 $status_linkColor:#AD1D22;
 $status_attentionColor:#AD1D22;
-$status_auxiliaryColor:#FFCACF;
+$status_auxiliaryBgColor:#AC1D22;
+$status_auxiliaryTxtColor:#fff;
 
 $border_color: #999;
 
