--- a/res/sass/_partial/components/subnav/_subnav.scss
+++ b/res/sass/_partial/components/subnav/_subnav.scss
@@ -3,10 +3,13 @@
   display: table;
   table-layout: fixed;
   border-collapse: collapse;
+  border-top:1px solid $border_color;
+  border-bottom:1px solid $border_color;
   li{
     display: table-cell;
     vertical-align: middle;
     text-align: center;
+    padding:5px 0;
     a{
       display: block;
       height:100%;
@@ -16,9 +19,9 @@
       padding:5px;
     }
     &.cur{
-      background-color:$status_auxiliaryColor;
+      background-color:$status_auxiliaryBgColor;
       a{
-        color:$status_normalColor;
+        color:$status_auxiliaryTxtColor !important;
         &:hover{
           text-decoration: none;
         } 
