--- a/res/sass/_partial/scaffolding/layout/_container.scss
+++ b/res/sass/_partial/scaffolding/layout/_container.scss
@@ -4,6 +4,11 @@
   min-width: #{$sp_container_minWidth}px;
   margin-left: auto;
   margin-right: auto;
+  .copy{
+    padding: 10px 20px;
+    font-size:#{$textTinySize}px;
+    text-align: center;
+  }
 }
 
 body{
