--- a/res/sass/_partial/components/section/_unit.scss
+++ b/res/sass/_partial/components/section/_unit.scss
@@ -2,12 +2,18 @@
   margin-top:10px;
   min-height:70px;
   border:1px solid $border_color;
-  background-image:url(../images/menu/hinabe2.png);
-  background-position:right bottom;
-  background-repeat:no-repeat;
   padding:6px 4px;
   line-height:$textLineHeightL;
   @include text-shadow(0 1px 0 #fff);
+  ul{
+  width: 100%;
+  display: table;
+  table-layout: fixed;
+  border-collapse: collapse;
+    li{
+      display: table-cell;
+    }
+  }
 }
 
 .asideUnit{
