--- a/res/sass/_partial/scaffolding_pc/layout/_global_navigation.scss
+++ b/res/sass/_partial/scaffolding_pc/layout/_global_navigation.scss
@@ -37,19 +37,18 @@
           display: none;
         }
         ul.sub{
-          padding:5px 0 0 10px;
+          padding:10px 0 0 15px;
           > li{
-            margin-bottom: 3px;
-            padding:3px 2px;
+            margin-bottom: 10px;
             >a{
               display: block;
               line-height: 22px;
-              padding:0 3px;
             }
             &.cur{
-              background-color:$status_auxiliaryBgColor;
+              color:$status_attentionColor;
               a{
-                color:$status_auxiliaryTxtColor !important;
+                color:$status_attentionColor !important;
+                font-weight: bold;
                 &:hover{
                   text-decoration: none;
                 }
