--- a/res/sass/_partial/components/subnav/_subnav.scss
+++ b/res/sass/_partial/components/subnav/_subnav.scss
@@ -19,6 +19,7 @@
     }
     &.cur{
       background-color:$status_auxiliaryBgColor;
+      font-weight: bold;
       a{
         &:hover{
           text-decoration: none;
