--- a/res/sass/_partial/components/section/_unit.scss
+++ b/res/sass/_partial/components/section/_unit.scss
@@ -96,19 +96,119 @@
   .selectStep{
     margin-top: -10px;
     > li{
-      background-color:#FFF3C2;
-      border:4px solid #CF9076;
-      @include border-radius(10px);
-      margin-top:10px;
-      padding:10px;
     }
   }
+  .selectBox{
+    background-color:#FFF3C2;
+    border:4px solid #CF9076;
+    @include border-radius(10px);
+    margin-top:10px;
+    padding:10px;
+    height: 100%;
+    min-height: 380px;
+  }
   .selectHead{
-    font-size:18px;
+    font-size:20px;
     font-weight: bold;
+    margin-bottom: 10px;
     img{
       vertical-align: middle;
       margin-right: 15px;
+    }
+  }
+
+  //値段のところ
+  .charge{
+    @include pie-clearfix;
+    margin-bottom: 10px;
+    .chargeDtl{
+      float: left;
+      padding-right:5px;
+      p{
+        color:#AC1D22;
+        font-size:14px;
+        text-align: center;
+        &.base{
+          font-size:26px;
+          border-bottom:1px solid #AC1D22;
+          margin-top:10px;
+          margin-bottom:5px;
+          padding-bottom:10px;
+        }
+      }
+    }
+    .chargeImg{
+      float: left;
+    }
+  }
+
+  //おすすめの組み合わせ
+  .topping{
+    border:1px solid #989898;
+    padding:5px 10px 10px;
+    margin-bottom: 10px;
+    dt{
+      text-align: center;
+      font-size:18px;
+      margin-bottom: 15px;
+    }
+    dd{
+      line-height: $textLineHeightM;
+    }
+  }
+  .toppingNote{
+    line-height: $textLineHeight;
+  }
+
+  //スープ
+  .soupLead{
+    color:#AC1D22;
+    font-size:20px;
+    text-align: center;
+    margin-bottom:15px;
+  }
+  .soupLevel{
+    li{
+      border-top:1px solid #989898;
+      padding-top:5px;
+      margin-bottom:5px;
+      &:first-child{
+        border-top:none;
+      }
+    }
+    .level{
+      @include pie-clearfix;
+      color:#AC1D22;
+      font-size:16px;
+      line-height: 1;
+      font-weight:bold;
+      white-space: nowrap;
+    }
+    .num{
+      float: left;
+      display: block;
+      font-size:30px;
+      width: 35px;
+      vertical-align: top;
+      text-align: center;
+    }
+    .txt{
+      padding-top: 2px;
+      display: block;
+    }
+    .dsc{
+      margin-left:35px;
+      margin-top: -12px;
+    }
+  }
+}
+
+
+@media screen and (max-width: 960px) {
+  .selectStep{
+    li{
+      display: block !important;
+      padding:0 !important;
     }
   }
 }
