--- a/res/sass/_partial/components/section/_unit.scss
+++ b/res/sass/_partial/components/section/_unit.scss
@@ -190,7 +190,7 @@
       text-align: center;
     }
     .txt{
-      float: left;
+      padding-left: 35px;
       padding-top: 2px;
       display: block;
     }
