アイコン追加

--- a/res/sass/_partial/components/list/_definition.scss
+++ b/res/sass/_partial/components/list/_definition.scss
@@ -42,6 +42,10 @@
       font-size:#{$textTinySize}px;
       margin-left: 10px;
     }
+    img{
+      vertical-align: middle;
+      margin-left:3px;
+    }
   }
   dd{
     line-height: $textLineHeightL;
